// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders 1`] = `
<button
<<<<<<< HEAD
  className="sc-fVmPpc gjYCEh"
=======
  className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-fwZfOe kLjMVc"
  />
</button>
`;

exports[`Dialog renders Another Dialog Header 1`] = `
<button
<<<<<<< HEAD
  className="sc-fVmPpc gjYCEh"
=======
  className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-fwZfOe kLjMVc"
  />
</button>
`;

exports[`Dialog renders Dialog Header 1`] = `
<button
<<<<<<< HEAD
  className="sc-fVmPpc gjYCEh"
=======
  className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-fwZfOe kLjMVc"
  />
</button>
`;

exports[`Dialog renders RTL 1`] = `
<div
  dir="rtl"
>
  <button
<<<<<<< HEAD
    className="sc-fVmPpc gjYCEh"
=======
    className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="medium"
  >
    Open Dialog
    <div
      className="sc-fwZfOe kLjMVc"
    />
  </button>
</div>
`;

exports[`Dialog renders with No Background 1`] = `
<button
<<<<<<< HEAD
  className="sc-fVmPpc gjYCEh"
=======
  className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-fwZfOe kLjMVc"
  />
</button>
`;

exports[`Dialog renders with No Close 1`] = `
<button
<<<<<<< HEAD
  className="sc-fVmPpc gjYCEh"
=======
  className="sc-gJTyrF hwWDLk"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  size="medium"
>
  Open Dialog
  <div
    className="sc-fwZfOe kLjMVc"
  />
</button>
`;
